# todotable

./: .gitignore  README-tauri.md  README.md  index.html  package-lock.json  package.json  styles.css  바이브코딩 다이어리 와이어프레임.html
.github/workflows/: release.yml
scripts/: build-dist.mjs  make-latest-json.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
v2/: ai.jsx  i18n.jsx  music.jsx  photocard.jsx  side-dock-v2.jsx  store.jsx  timer.jsx  tracker.jsx  view-ai.jsx  view-cheat.jsx  view-mail.jsx  view-prompt.jsx  view-retro.jsx  view-today.jsx  view-todo.jsx  views-shared.jsx
wireframes/: bottom-dock.jsx  desktop-classic.jsx  mdi-window.jsx  side-dock-left.jsx  vertical-split.jsx
